manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    kubernates.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsenrypt-prod
spec:
  tls:
    - secretName: ulicode-space-tls
      hosts:
        - ulicode.space
  rules:
  - host: ulicode.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site
            port:
              number: 8080
